--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -20,7 +20,9 @@ body {
 }
 
 .title-large{
+	margin-top: 20px;
 	max-width: 90%;
+	max-height: 300px;
 }
 
 .login-pane{
@@ -29,6 +31,7 @@ body {
 
 input, textarea, select{
 	
+	font-size: 0.74em;
 	background-color: #afb3bb;
 	background: -webkit-gradient(linear, left top, left bottom, from(#d6d8dc),   to(#7b7ca7));
  	border: 1px solid #43474b;
@@ -36,14 +39,26 @@ input, textarea, select{
 	margin: 0.2em;
 	color: white;
 	font-weight: bold;
+	text-shadow: 1px 1px 7px black;
+	background-image: url("../images/gear-small-bg-gradient.jpg");
+	background-size: cover;
+	
+	
 }
 
 input[type=submit]{
 	background-color: #afb3bb;
 	background: -webkit-gradient(linear, left top, left bottom, from(#d6d8dc),   to(#7b7ca7));
  	border: 3px solid #43474b;
-	padding: 0.5em;
+	padding: 0.5em 1.2em;
 	margin: 0.2em;
+	text-shadow: 1px 1px 7px black;
+	background-image: url("../images/gear-small-bg-gradient.jpg");
+	background-size: cover;
+}
+
+.btn-container{
+	padding: 0.2em 0em;
 }
 
 /*
