--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -1,3 +1,4 @@
+
 body {
 	margin: 0;
 	padding: 0;
@@ -60,11 +61,20 @@ input[type=submit]{
 .btn-container{
 	padding: 0.2em 0em;
 }
-
 /*
-.transparent-box {
-	background-color: white;
-	opacity: 0.4;
-	border: 2px solid orange;
+@media only screen and (max-device-width: 700px){
+	body{
+		font-size: 3em;
+	}
+	.content{
+		width: 100%;
+		margin: 0%;
+	}
+	.title-large{
+		max-width: 100%;
+	}
+	input[type=submit]{
+		padding: 0.8em 1.3em;
+	}
 }
 */
