--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -103,6 +103,21 @@ background:radial-gradient(ellipse at center, rgba(255,5,5,1) 0%, rgba(255,5,5,1
 	border: none;
 }
 
+h1{
+	font-size: 1.1em;
+}
+.Blue{
+	background-color: blue;
+}
+
+.Red{
+	background-color: red;
+}
+
+.header{
+	margin-bottom: 20px;
+}
+
 @media only screen and (max-device-width: 700px){
 	body{
 		background-image: url("../images/steampunk-stylized-960.jpg");
