--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -146,7 +146,8 @@ h1{
 .team{
 	border: solid 1px white;
     float: left;
-    width: 32%;
+    width: 28%;
+    margin: 0% 2.5% 0% 2.5%;
 }
 
 .teamNumber {
@@ -204,6 +205,7 @@ h1{
 	    float: none;
 	    width: 80%;
 	    margin-left: 10%;
+	    margin-bottom: 35px;
 	}
 }
 @media only screen and (min-width: 2200px){
