--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -147,7 +147,7 @@ h1{
 	border: solid 1px white;
     float: left;
     width: 28%;
-    margin: 0% 2.5% 0% 2.5%;
+    margin: 0% 2.5% 25px 2.5%;
 }
 
 .teamNumber {
@@ -159,8 +159,8 @@ h1{
 }
 
 .form-line{
-	margin-top: 6px;
-	margin-bottom: 6px;
+	margin-top: 2px;
+	margin-bottom: 10px;
 	padding: .2em 0 .2em 0;
 }
 
