--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -14,7 +14,10 @@ body {
 	color: white;
 	font-family: verdana, Sans-serif;
 }
-
+iframe{
+	width: 100%;
+	height: 1000px;
+}
 h2{
 	font-size: 1.1em;
 }
