--- a/ROOT/resources/css/style.css
+++ b/ROOT/resources/css/style.css
@@ -42,6 +42,7 @@ h2{
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
+    overflow-y: hidden; /* Disable vertical scroll */
     padding-top: 60px; /* Place content 60px from the top */
     padding-left: 0px;
     transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
@@ -277,14 +278,15 @@ h1{
 		
 	}
 	.sidenav{
-	    height: 400px; /* 100% Full-height */
-	    width: 0; /* 0 width - change this with JavaScript */
+	    height: 0px; /* 0 height; change this with JavaScript  */
+	    width: 100%; /* 100% width - full width */
 	    position: inherit; /* Stay in place */
 	    z-index: 1; /* Stay on top */
 	    /*top: 0;
 	    left: 0;*/
 	    overflow-x: hidden; /* Disable horizontal scroll */
-	    padding-top: 60px; /* Place content 60px from the top */
+	    overflow-y: hidden; /* Disable vertical scroll */
+	    padding-top: 0px; /* No padding */
 	    padding-left: 0px;
 	    transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
 	    
